[gd_scene load_steps=3 format=3 uid="uid://bc0vci5xr8orb"]

[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="1_x8rw8"]
[ext_resource type="FontFile" uid="uid://cpb8liw262yah" path="res://resources/ui/fonts/PressStart2P-Regular.ttf" id="2_wmh1k"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x8rw8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.501961)

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Main"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wmh1k")
text = "Resume"
flat = true

[node name="QuitButton" type="Button" parent="Main"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wmh1k")
text = "Quit"
flat = true

[connection signal="pressed" from="Main/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Main/QuitButton" to="." method="_on_QuitButton_pressed"]
